--- a/web-components/index.html
+++ b/web-components/index.html
@@ -9,7 +9,8 @@
     <div id="header">Header</div>
     <div id="footer">Footer</div>
     <script src="https://unpkg.com/vue"></script>
-    <script src="/dist/notification-group.js"></script>
-    <notificaation-group />
+    <script src="/dist/display-message.js"></script>
+    <script src="http://localhost:8080/static/embed-script/index.js"></script>
+    <display-message />
   </body>
 </html>
