--- a/web-components/index.html
+++ b/web-components/index.html
@@ -9,8 +9,8 @@
     <div id="header">Header</div>
     <div id="footer">Footer</div>
     <script src="https://unpkg.com/vue"></script>
-    <script src="/dist/display-message.js"></script>
+    <script src="/dist/notification-component.js"></script>
     <script src="http://localhost:8080/static/embed-script/index.js"></script>
-    <display-message />
+    <notification-component categories="Weather" />
   </body>
 </html>
