--- a/web-components/index.html
+++ b/web-components/index.html
@@ -7,10 +7,75 @@
   </head>
   <body>
     <div id="header">Header</div>
-    <div id="footer">Footer</div>
+    <div id="footer">
+      <asd20-notification-component />
+    </div>
+    <aside></aside>
     <script src="https://unpkg.com/vue"></script>
-    <script src="/dist/notification-component.js"></script>
-    <script src="http://localhost:8080/static/embed-script/index.js"></script>
-    <notification-component categories="Weather" />
+    <script src="/dist/asd20.js"></script>
+
+    <script>
+      let informationalNotifications = []
+      let emergencyNotifications = []
+      let urgentNotifications = []
+      let notificationGroups = []
+
+      const wc = document.querySelector('asd20-notification-component')
+      function setNotifications(e) {
+        console.log('event caught')
+        notificationGroups = e.detail[0]
+        emergencyNotifications = notificationGroups.filter(n => {
+          if (n.type === 'Emergency') {
+            return n.notifications
+          }
+        })
+        informationalNotifications = notificationGroups.filter(n => {
+          if (n.type === 'Informational') {
+            return n.notifications
+          }
+        })
+        urgentNotifications = notificationGroups.filter(n => {
+          if (n.type === 'Urgent') {
+            return n.notifications
+          }
+        })
+        // console.log('emergency set', emergencyNotifications[0].notifications)
+        // console.log(
+        //   'informational set',
+        //   informationalNotifications[0].notifications
+        // )
+        console.log('Urgent set', urgentNotifications[0].notifications)
+
+        // pass in data
+        wc.embedLocations = [
+          {
+            location: 'aside',
+            style: 'Banner',
+            notifications: [
+              emergencyNotifications[0].notifications,
+              urgentNotifications[0].notifications
+            ].flat()
+          },
+          {
+            location: 'aside',
+            style: 'Inline',
+            notifications: informationalNotifications[0].notifications
+          }
+        ]
+        console.log(wc)
+      }
+
+      wc.addEventListener('loaded', e => setNotifications(e))
+
+      wc.categories = ['TAG']
+
+      // console.log(wc.notifications)
+      // console.log(wc.vueComponent)
+      // let allReturnedNotifications = []
+      // async function fetchedNotifications() {
+      //   allReturnedNotifications = await wc.vueComponent.fetchNotifications()
+      // }
+      // fetchedNotifications()
+    </script>
   </body>
 </html>
