setting props works the hard way

--- a/web-components/index.html
+++ b/web-components/index.html
@@ -49,7 +49,7 @@
         // pass in data
         wc.embedLocations = [
           {
-            location: 'aside',
+            el: 'aside',
             style: 'Banner',
             notifications: [
               emergencyNotifications[0].notifications,
@@ -57,7 +57,7 @@
             ].flat()
           },
           {
-            location: 'aside',
+            el: 'aside',
             style: 'Inline',
             notifications: informationalNotifications[0].notifications
           }
