--- a/web-components/index.html
+++ b/web-components/index.html
@@ -44,13 +44,13 @@
         //   'informational set',
         //   informationalNotifications[0].notifications
         // )
-        console.log('Urgent set', urgentNotifications[0].notifications)
+        // console.log('Urgent set', urgentNotifications[0].notifications)
 
         // pass in data
         wc.embedLocations = [
           {
-            el: 'aside',
-            style: 'Banner',
+            el: '#header',
+            style: 'Floating',
             notifications: [
               emergencyNotifications[0].notifications,
               urgentNotifications[0].notifications
