--- a/web-components/index.html
+++ b/web-components/index.html
@@ -50,7 +50,7 @@
         wc.embedLocations = [
           {
             el: '#header',
-            style: 'Floating',
+            style: 'Banner',
             notifications: [
               emergencyNotifications[0].notifications,
               urgentNotifications[0].notifications
