refactor(templates): add prompts and help to package generator

--- a/_templates/package/new/examples/web-app/index.html
+++ b/_templates/package/new/examples/web-app/index.html
@@ -1,5 +1,5 @@
 ---
-to: packages/<%= h.changeCase.snake(pkg) %>/examples/web-app/index.html
+to: "<%= useVueComponents ? `packages/${h.changeCase.snake(pkg)}/examples/web-app/index.html` : null %>"
 ---
 <!DOCTYPE html>
 <html lang="en">
