--- a/_templates/package/new/examples/vue-app/index.html
+++ b/_templates/package/new/examples/vue-app/index.html
@@ -1,5 +1,5 @@
 ---
-to: packages/<%= h.changeCase.snake(pkg) %>/examples/vue-app/index.html
+to: "<%= useVueComponents ? `packages/${h.changeCase.snake(pkg)}/examples/vue-app/index.html` : null %>"
 ---
 <!DOCTYPE html>
 
