--- a/_templates/package/new/examples/web-app/index.html
+++ b/_templates/package/new/examples/web-app/index.html
@@ -1,5 +1,5 @@
 ---
-to: "<%= useVueComponents ? `packages/${h.changeCase.snake(pkg)}/examples/web-app/index.html` : null %>"
+to: "<%= useVueComponents ? `packages/${h.changeCase.param(pkg)}/examples/web-app/index.html` : null %>"
 ---
 <!DOCTYPE html>
 <html lang="en">
@@ -12,9 +12,9 @@ to: "<%= useVueComponents ? `packages/${h.changeCase.snake(pkg)}/examples/web-ap
   <!-- Load Vue -->
   <script src="https://unpkg.com/vue"></script>
   <!-- Load the library -->
-  <script src="../../dist/asd20-notification-<%= h.changeCase.snake(pkg) %>.umd.js"></script>
+  <script src="../../dist/asd20-notification-<%= h.changeCase.param(pkg) %>.umd.js"></script>
   <!-- Note: In production, you can use a CDN url
-  <script src="https://unpkg.com/asd20-notification-<%= h.changeCase.snake(pkg) %>"></script>
+  <script src="https://unpkg.com/asd20-notification-<%= h.changeCase.param(pkg) %>"></script>
   -->
 
   <!-- Example #1: Using a UMD package with global scope -->
