--- a/_templates/package/new/examples/web-app/index.html
+++ b/_templates/package/new/examples/web-app/index.html
@@ -19,7 +19,7 @@ to: "<%= useVueComponents ? `packages/${h.changeCase.param(pkg)}/examples/web-ap
 
   <!-- Example #1: Using a UMD package with global scope -->
   <script>
-    console.log(Asd20Notifications<%= h.changeCase.title(pkg) %>.sayHello('from global scope'))
+    console.log(Asd20Notifications<%= h.changeCase.pascal(pkg) %>.sayHello('from global scope'))
   </script>
 
   <!-- Example #2: Using a web component -->
