chore(client): :tada: cleint interface definitions and file structure

--- a/packages/client/examples/web-app/index.html
+++ b/packages/client/examples/web-app/index.html
@@ -14,13 +14,14 @@
   <script src="https://unpkg.com/asd20-notification-client"></script>
   -->
 
+  <!-- Example #2: Using a web component -->
+  <!-- <asd20-notifications name="from Web Component"/> -->
   <!-- Example #1: Using a UMD package with global scope -->
   <script>
     console.log(Asd20NotificationsClient.sayHello('from global scope'))
+    Asd20NotificationsClient.init()
   </script>
 
-  <!-- Example #2: Using a web component -->
-  <asd20-say-hello name="from Web Component"/>
   
 </body>
 </html>
