feat(ui): notification components added to embed script

--- a/packages/embed/examples/vue-app/index.html
+++ b/packages/embed/examples/vue-app/index.html
@@ -7,10 +7,10 @@
 
   <body>
     <div id="header">
-      Header
+      Header here
     </div>
     <div id="body">
-      Body Here
+      Body here
     </div>
 
     <div id="app"></div>
