fix(plugins): update search endpoint helper logic

--- a/packages/plugin-cc-messages/examples/web-app/index.html
+++ b/packages/plugin-cc-messages/examples/web-app/index.html
@@ -17,7 +17,7 @@
       try {
         const client = new Asd20NotificationsClient({
           onUpdate(payload) {
-            console.log('update', payload)
+            console.log('cc-messages update', payload)
           },
           plugins: [
             Asd20NotificationsPluginCcMessages.Create({
@@ -25,12 +25,13 @@
               index: 'messages-index',
               apiKey: '937716815402758ADC2FE799FE288142',
               apiVersion: '2019-05-06',
-              search: 'COVID-19',
-              channels: ['News & Stories'],
+              search: '',
+              channels: ['Notification'],
+              locations: ['District Wide', 'Test Subscription Location'],
+              categories: ['Weather', 'Emergency', 'Tests']
             }),
           ],
         })
-        console.log(client)
       } catch (error) {
         console.log(error)
       }
