--- a/packages/client/examples/web-app/index.html
+++ b/packages/client/examples/web-app/index.html
@@ -14,10 +14,10 @@
   <script src="../../../plugin-json/dist/asd20-plugin-json.umd.js"></script>
   <script>
     
-
+    async function run(){
     const config = {
       onUpdate(payload) {
-        console.log('update', payload)
+        console.log('client update', payload)
       },
       plugins: [Asd20NotificationsPluginJson.Create({endpoint: '', 
       requestOptions: {
@@ -49,6 +49,8 @@
       
     }
     const myClient = new Asd20NotificationsClient(config)
+  }
+  run()
  
   </script>
 
