feat(ui): connecting ui components to embed

--- a/packages/embed/examples/vue-app/index.html
+++ b/packages/embed/examples/vue-app/index.html
@@ -3,15 +3,18 @@
 <html lang="en">
   <head>
     <title>Example Vue App</title>
+
   </head>
 
   <body>
-    <div id="header">
+    <!-- <div id="header">
       Header here
     </div>
     <div id="body">
       Body here
-    </div>
+    </div> -->
+
+
 
     <div id="app"></div>
     <script src="./main.js"></script>
