--- a/packages/ui/examples/vue-app/index.html
+++ b/packages/ui/examples/vue-app/index.html
@@ -3,10 +3,13 @@
 <html lang="en">
   <head>
     <title>Example Vue App</title>
+   
   </head>
 
   <body>
-    <div id="app"></div>
+    <div id="app">
+     
+    </div>
     <script src="./main.js"></script>
   </body>
 </html>
