--- a/packages/ui/examples/web-app/index.html
+++ b/packages/ui/examples/web-app/index.html
@@ -9,7 +9,7 @@
     <!-- Load Vue -->
     <script src="https://unpkg.com/vue"></script>
     <!-- Load the library -->
-    <script src="../../dist/asd20-notifications-ui.umd.js"></script>
+    <script src="../../dist/asd20-notifications-ui.web-components.umd.js"></script>
     <!-- Note: In production, you can use a CDN url
   <script src="https://unpkg.com/asd20-notifications-ui"></script>
   -->
