Fix missing css, closes #88 (#94)
* fix(ui): fix: remove lodash dependency

* refactor(ui): use multiple wrapper / entry files for different builds

* refactor(ui): switch to rollup for build

* refactor(embed): update emebed example to use web components and css

* ci(project): fix package path

* ci: fix package path issues

* fix(shared): add missing types

* ci(project): move dev  dep @types/lodash to root

* fix(plugins): fix type error

* ci(embed): ignore stats files

Co-authored-by: David Hayes <david.hayes@asd20.org>

--- a/packages/embed/examples/web-app/index.html
+++ b/packages/embed/examples/web-app/index.html
@@ -73,8 +73,9 @@ Donec sed odio dui. Donec ullamcorper nulla non metus auctor fringilla. Lorem ip
   <!-- Load Vue -->
   <script src="https://unpkg.com/vue"></script>
   <!-- Load the library -->
-  <script src="../../dist/asd20-notifications-embed.umd.js"></script>
+  <script src="../../dist/asd20-notifications-embed.web-components.umd.js"></script>
   <script src="../../../plugin-cc-messages/dist/asd20-notifications-plugin-cc-messages.umd.js"></script>
+  <link rel="stylesheet" href="../../../ui/dist/asd20-notifications-ui.css">
   <!-- Note: In production, you can use a CDN url
   <script src="https://unpkg.com/asd20-notifications-embed"></script>
   -->
