--- a/packages/embed/examples/web-app/index.html
+++ b/packages/embed/examples/web-app/index.html
@@ -80,7 +80,7 @@ Donec sed odio dui. Donec ullamcorper nulla non metus auctor fringilla. Lorem ip
   <script src="../../dist/asd20-notifications-embed.web-components.umd.js"></script>
 
   <script src="../../../plugin-cc-messages/dist/asd20-notifications-plugin-cc-messages.umd.js"></script>
-  <link rel="stylesheet" href="../../../ui/dist/asd20-notifications-ui.css">
+  <!-- <link rel="stylesheet" href="../../../ui/dist/asd20-notifications-ui.css"> -->
   <!-- Note: In production, you can use a CDN url
   <script src="https://unpkg.com/asd20-notifications-embed"></script>
   -->
@@ -141,7 +141,7 @@ Donec sed odio dui. Donec ullamcorper nulla non metus auctor fringilla. Lorem ip
       ],
       
     }
-   const groups = {
+  const groups = {
     banner: {
       selector: `body`,
       prepend: true
@@ -149,7 +149,7 @@ Donec sed odio dui. Donec ullamcorper nulla non metus auctor fringilla. Lorem ip
     floating: {
       selector: `body`,
       prepend: true,
-      position: 'top-right'
+      position: 'bottom-right'
     },
   }
   
