--- a/packages/plugin-cc-messages/examples/web-app/index.html
+++ b/packages/plugin-cc-messages/examples/web-app/index.html
@@ -31,7 +31,7 @@
               // apiVersion: '2019-05-06',
               search: '',
               channels: ['Notification'],
-              locations: ['District Wide'],
+              destinations: ['District Wide'],
               categories: [],
               displayRules: [
                 {
